--- a/html/css/admin_nutri_add.css
+++ b/html/css/admin_nutri_add.css
@@ -1,15 +1,25 @@
-.body {
-  min-height: calc(100vh - 100px);
-  margin: 30px;
-  width: 500px;
+@font-face {
+  font-family: 'NanumSquareNeo-Variable';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
 }
-.admin_nutri_add{
-  margin: 120px;
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 100px;
 }
+
 h1 {
+  top: 10%;
+  font: 30px bold;
   text-align: center;
-  margin: 10%;
 }
+
+.admin_nutri_add {
+  margin: 100px;
+}
+
 
 table {
   margin: auto;
@@ -38,58 +48,21 @@ td {
 
 .button-row input[type="button"],
 .button-row input[type="submit"] {
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 10px 36px;
+  font: 17px bold;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  margin-right: 25px;
 }
 
-.button-row input[type="submit"] {
-  background-color: black;
+.button-row .check {
+  border: 1px solid #00997B;
+  background-color: #00997B;
   color: #fff;
 }
 
-.body {
-    min-height: calc(100vh - 100px);
-    margin: 30px;
-    width: 500px;
-  }
-
-  h1 {
-    text-align: center;
-    margin: 10%;
-  }
-
-  table {
-    margin: auto;
-    border-collapse: collapse;
-  }
-
-  td {
-    padding: 10px;
-    border: 1px solid #ccc;
-  }
-
-  .textarea-row {
-    width: 60%;
-  }
-
-  .input-row input[type="text"],
-  .textarea-row textarea {
-    width: 100%;
-    padding: 5px;
-  }
-
-  .button-row {
-    margin-top: 20px;
-    text-align: center;
-  }
-
-  .button-row input[type="button"],
-  .button-row input[type="submit"] {
-    padding: 10px 20px;
-    font-size: 16px;
-  }
-
-  .button-row input[type="submit"] {
-    background-color: black;
-    color: #fff;
-  }
+.button-row .delete {
+  background-color: red;
+  border: 1px solid red;
+  color: #fff;
+}
