--- a/html/css/find_pwd.css
+++ b/html/css/find_pwd.css
@@ -1,58 +1,163 @@
-.body{
-  min-height: calc(100vh - 100px);
-  margin: 30px;
-  width: 500px;
+@font-face {
+  font-family: 'NanumSquareNeo-Variable';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
 }
-.body_main_size img{
-  display: flex;
-  margin: 150px auto;
-  width: 250px;
-}
-#reset_pwd{
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
+
+.body {
   align-items: center;
-  width: 350px;
-  height: 350px;
-  border: 4px solid #00997B ;
-  border-radius: 10%;
-  margin-bottom: 10%;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  /* background-color: #f5f5f5; */
+  font-family: 'NanumSquareNeo-Variable';
+  font-size: 18px;
 }
-#reset_pwd form h1{
-  font-size: 30px;
-  margin-bottom: 10%;
+
+.container {
+  display: grid;
+  place-items: center;
+  /* height: 100vh; */
+}
+
+h1 {
+  padding: 30px 0px;
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+}
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.form-floatin input {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  width: 300px;
+}
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+.b-example-divider {
+  /* height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15); */
+}
+
+.b-example-vr {
+  flex-shrink: 0;
+  width: 1.5rem;
+  height: 100vh;
+}
+
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
+
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden;
+}
+
+.nav-scroller .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  padding-bottom: 1rem;
+  margin-top: -1px;
+  overflow-x: auto;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+}
+
+.form-align {
   text-align: center;
 }
 
-#reset_pwd form p{
-  font-size: 18px;
-  margin-bottom: 10%;
+form {
+  border: 3px solid #00997B;
+  border-radius: 20px;
+  width: 500px;
+  /* height: 720px; */
+  padding: 30px;
+  margin-bottom: 100px;
+}
+
+form#user_info {
+  width: 500px;
+  height: 50px;
+}
+
+.form-floating {
   text-align: left;
-}
-#reset_pwd form .info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-bottom: 20px;
 }
 
-#reset_pwd form .info input {
-  width: 80%;
-  height: 40px;
-  padding: 5px;
-  margin-bottom: 10px;
-  border: 2px solid gray;
-  border-radius: 5px;
-  font-size: 16px;
+img {
+  width: 200px;
 }
 
-#reset_pwd form .info button {
-  width: 80%;
-  height: 40px;
-  border: none;
-  border-radius: 5px;
+.info-title {
+  font-size: 18px;
+  text-align: left;
+  padding: 10px;
+}
+
+/* 
+.form-floating.gender {
+  justify-content: center;
+  width: 100%;
+} */
+
+/* .form-floating.gender input[type="radio"] {
+  flex: 1;
+  margin-left: 15px;
+  margin-right: 10px;
+} */
+
+/* .user_info {
+  margin-left: 12px;
+} */
+
+.form-btn button {
+  margin-top: 20px;
+  color: #fff;
+  border: 3px solid #00997B;
   background-color: #00997B;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
+}
+.form-btn button:hover{
+  
 }
