--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1,4 +1,10 @@
 /* CSS style sheet */
+@font-face {
+  font-family: 'NanumSquareNeo-Variable';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
 
 .banner {
   position: relative;
@@ -28,41 +34,64 @@
 }
 
 .container {
-  text-align: center;
+  text-align: left;
   margin: 5%;
 }
 
 .container #main_contens {
   display: flex;
   margin-left: 30%;
+  margin-bottom: 10%;
+  font: 15px bold;
+  position: static;
+  width: 50%;
+  /* animation-name: slides;
+  animation-duration: 1s;
+  animation-fill-mode: forwards; */
 }
 
 #main_contens img {
-  width: 350px;
+  width: 240px;
 }
 
-.container #main_contens .main_context #sle1 {
-  margin-right: 60%;
-  font-size: 45px;
-  position: absolute;
-  /* padding-right: 50%; */
-  animation-name: slides;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
+#banner {
+  /* width: 30%; */
 }
 
-.container #main_contens .main_context button {
-  margin: 50px;
+#banner a button {
   color: #fff;
   border: 1px solid #00997B;
   text-decoration: none;
   text-align: center;
   background-color: #00997B;
-  width: 120px;
+  width: 30%;
   height: 50px;
   line-height: 40px;
   border-radius: 4%;
   font: 20px bold;
+}
+
+.container #main_contens .main_context {
+  margin-bottom: 10%;
+  font: 15px bold;
+  position: static;
+  width: 50%;
+  animation-name: slides;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+/* .container #main_contens .main_context button:hover {
+  border: 1px solid #00997B;
+  background-color: #fff;
+  color: #00997B;
+  
+} */
+#banner button:hover {
+  border: 1px solid #00997B;
+  background-color: #fff;
+  color: #00997B;
+
 }
 
 #icon:checked+label+#in_navi {
@@ -87,29 +116,42 @@
 
 }
 
-@keyframes slides {
+/* @keyframes slides {
   from {
-    left: 10%;
+    left: 7%;
     opacity: 0;
   }
-
+  
   to {
-    left: 20%;
+    left: 15%;
     opacity: 1;
   }
-
+  
 }
 
 @keyframes outslide {
   from {
-    left: 20%;
+    left: 15%;
     opacity: 1;
-
+    
   }
-
+  
   to {
-    left: 10%;
+    left: 7%;
     opacity: 0;
   }
-}
-
+} */
+/* .container #main_contens .main_context button {
+  left: 10%;
+  bottom: -200px;
+  color: #fff;
+  border: 1px solid #00997B;
+  text-decoration: none;
+  text-align: center;
+  background-color: #00997B;
+  width: 100%;
+  height: 50px;
+  line-height: 40px;
+  border-radius: 4%;
+  font: 20px bold;
+} */
