--- a/html/css/find_pwd.css
+++ b/html/css/find_pwd.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'NanumSquareNeo-Variable';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
 .body{
   min-height: calc(100vh - 100px);
   margin: 30px;
