--- a/html/css/header.css
+++ b/html/css/header.css
@@ -50,7 +50,7 @@ input[id="icon"]+label>span {
   ;
   height: 5px;
   border-radius: 30px;
-  background: #000;
+  background: #00997B;
   transition: all 0.35s;
   /* 진행되는 과정들을 천천히 보여줄 수 있다. 0.35초 동안 진행됨 */
   z-index: 2;
@@ -106,6 +106,7 @@ input[id="icon"]:checked+label>span:nth-child(3) {
 
 #icon:checked+label+#in_navi>ul>li>a {
   color: white;
+  font: 20px bold ;
 
 }
 
@@ -115,7 +116,7 @@ input[id="icon"]:checked+label>span:nth-child(3) {
 }
 
 .nav-link img {
-  max-width: 60%;
+  max-width: 50%;
   height: auto;
 }
 
@@ -124,26 +125,25 @@ input[id="icon"]:checked+label>span:nth-child(3) {
   display: flex;
   align-items: center;
   background-color: #fff;
-  border: 4px solid #00997B;
   box-shadow: 5px 5px 5px 2px rgb(94, 94, 94);
   transition: top 0.3s;
 }
 
 #search-bar input {
   flex: 1;
-  height: 100%;
+  height: 30px;
   border: none;
   outline: none;
-  font-size: 30px;
+  font-size: 20px;
   text-align: left;
   /* 왼쪽 정렬 */
 }
 
 #search-bar button {
-  background: url(/img/search.png);
+  background: url(../img/search.png);
   background-repeat: no-repeat;
-  width: 60px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   color: #fff;
   border: none;
   cursor: pointer;
@@ -175,8 +175,8 @@ input[id="icon"]:checked+label>span:nth-child(3) {
 #util #signup,
 #util #mypage,
 #util #logout {
-  color: #00997B;
-  border: 3px solid #00997B;
+  color: rgb(69, 181, 170);
+  border: 3px solid rgb(69, 181, 170);
   margin-left: 10px;
   width: 120px;
   height: 60px;
@@ -188,12 +188,12 @@ input[id="icon"]:checked+label>span:nth-child(3) {
 
 #util #signup {
   color: #fff;
-  background-color: #00997B;
+  background-color: rgb(69, 181, 170);
 }
 
 #util #logout {
   color: #fff;
-  background-color: #00997B;
+  background-color: rgb(69, 181, 170);
 }
 
 #util #logoin:hover,
