--- a/html/css/footer.css
+++ b/html/css/footer.css
@@ -1,5 +1,5 @@
 footer {
-	background-color: #f2f2f2;
+	background-color: #fff;
 	padding: 20px;
 	text-align: center;
 }
@@ -8,3 +8,12 @@ footer img{
 	transform: rotate(45deg);
 }
 
+footer::before {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 1px;
+	background-color: gray;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
