--- a/html/css/user_menu.css
+++ b/html/css/user_menu.css
@@ -1,83 +1,56 @@
-html,
-body {
-  height: 100%;
+@charset "UTF-8";
+
+/* Defuault settings */
+h1,
+h2,
+h3,
+h4,
+h5,
+a {
+  font-size: 16px;
+  line-height: normal;
+  font-weight: 100;
+  text-decoration: none;
+  color: #000;
 }
 
-@font-face {
-  font-family: 'NanumSquareNeo-Variable';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
-
-
-body {
-  display: flex;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
-  font-family: 'NanumSquareNeo-Variable';
-  font-size: 18px;
-}
-
-
-.container {
-  display: grid;
-  place-items: center;
-  height: 100vh;
-}
-
-
-h1 {
-  padding: 30px 0px;
+/* Container */
+.container-lg {
   text-align: center;
 }
 
-
-.container {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+/* Semi title */
+.container-lg h2 {
+  font-size: 42px;
+  font-weight: 400;
 }
 
-.box {
-  flex: 1;
+
+.user_menu_list {
   display: flex;
   justify-content: center;
-  align-items: center;
+  gap: 20px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
-.box:nth-child(2) {
+.user_menu {
+  width: 160px;
+  height: 160px;
+  background-color: #fefefe;
+  border: 1px solid #eee;
+  justify-content: center;
+  justify-items: center;
+  border-radius: 20px;
+  line-height: 60px;
+  box-shadow: 5px 10px 15px #bbb;
   font-size: 24px;
+  font-weight: 500;
+  color: #333;
 }
 
-.image-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0.2, 0.5);
-  border-radius: 5px;
-  padding: 20px;
-  margin: 50px;
-  width: 200px;
-  height: 200px;
-  background-color: #fff;
-}
-
-.image-box img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-  margin-bottom: 10px;
-}
-
-
-button {
-  padding: 10px 20px;
-  background-color: #f1f1f1;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+.user_menu_list .user_menu:hover {
+  scale: 1.1;
+  box-shadow: 7px 15px 20px #ddd;
+  transition: 0.25s;
 }
