--- a/html/css/join.css
+++ b/html/css/join.css
@@ -34,7 +34,7 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-color: #fff;
   font-family: 'NanumSquareNeo-Variable';
   font-size: 18px;
 }
