--- a/html/css/nutri_about.css
+++ b/html/css/nutri_about.css
@@ -14,7 +14,7 @@ body {
   padding-top: 3rem;
   padding-bottom: 3rem;
   color: #5a5a5a;
-  background-color: #f5f5f5;
+  background-color: #fff;
   font-family: 'NanumSquareNeo-Variable';
   font-size: 18px;
 }
@@ -75,7 +75,7 @@ body {
 ------------------------- */
 
 .nutri_about li {
-  font-size: 30px;
+  font-size: 32px;
   margin-left: 110px;
   margin-bottom: 20px;
 }
@@ -92,7 +92,7 @@ body {
   padding: 0;
   margin-left: 10px;
   font-size: 38px;
-  color: #ccc;
+  color: #fff;
   cursor: pointer;
 }
 
@@ -138,7 +138,7 @@ body {
   }
 
   .featurette-heading {
-    font-size: 50px;
+    font-size: 42px;
   }
 }
 
