--- a/html/css/header.css
+++ b/html/css/header.css
@@ -19,7 +19,6 @@
 }
 
 .nav {
-
   margin: 3% auto;
   width: 100%;
   display: flex;
@@ -29,8 +28,10 @@
 }
 
 #checkbox {
-  width: 200px;
+  width: 0px;
   height: 100%;
+  padding-right: 0px;
+  margin-left : 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -44,7 +45,7 @@ input[id="icon"]+label {
   position: absolute;
   display: block;
   margin: 50px;
-  height: 36px;
+  height: 30px;
   cursor: pointer;
   /* 커서를 올려놓을 때 모양이 바뀐다. */
 }
@@ -52,8 +53,7 @@ input[id="icon"]+label {
 input[id="icon"]+label>span {
   position: absolute;
   display: block;
-  width: 50px;
-  ;
+  width: 40px;
   height: 5px;
   border-radius: 30px;
   background: rgb(94, 94, 94);
@@ -117,13 +117,12 @@ input[id="icon"]:checked+label>span:nth-child(3) {
 }
 
 #logo {
-  width: 10%;
-  margin-right: auto;
+  width: 200px;
+  margin-right: 30px;
 }
 
 .nav-link img {
-  max-width: 50%;
-  height: auto;
+  width: 100%;
 }
 
 #search-bar {
@@ -131,8 +130,8 @@ input[id="icon"]:checked+label>span:nth-child(3) {
   display: flex;
   align-items: center;
   background-color: #fff;
-  box-shadow: 5px 5px 5px 2px rgb(94, 94, 94);
-  transition: top 0.3s;
+  border: solid 1px #ccc;
+  height: 45px;
 }
 
 #search-bar input {
@@ -140,7 +139,7 @@ input[id="icon"]:checked+label>span:nth-child(3) {
   height: 30px;
   border: none;
   outline: none;
-  font: 20px bold;
+  font: 14px bold;
   text-align: left;
   /* 왼쪽 정렬 */
 }
@@ -150,6 +149,7 @@ input[id="icon"]:checked+label>span:nth-child(3) {
   background-repeat: no-repeat;
   width: 40px;
   height: 40px;
+  scale: 0.6;
   color: #fff;
   border: none;
   cursor: pointer;
@@ -184,9 +184,10 @@ input[id="icon"]:checked+label>span:nth-child(3) {
   color: #00997B;
   border: 3px solid #00997B;
   margin-left: 10px;
-  width: 120px;
-  height: 60px;
-  line-height: 55px;
+  width: 100px;
+  height: 40px;
+  line-height: 37px;
+  font-size : 14px;
   text-decoration: none;
   border-radius: 5px;
   text-align: center;
@@ -204,7 +205,7 @@ input[id="icon"]:checked+label>span:nth-child(3) {
 
 #util #logoin:hover,
 #util #mypage:hover {
-  background-color: rgb(69, 181, 170);
+  background-color: #00997B;
   color: #fff;
 }
 
