--- a/html/css/nutri_result.css
+++ b/html/css/nutri_result.css
@@ -6,10 +6,106 @@
 
 .location {
   text-align: left;
-  margin: 100px;
+  margin-left: 20%;
+  margin-top: 5%;
+
 }
 
-#nutri_main{
+@font-face {
+  font-family: 'NanumSquareNeo-Variable';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.container {
+  padding: 100px;
+}
+
+h1 {
+  text-align: center;
+}
+
+#product {
+  width: 250px;
+}
+
+.text_context {
+  display: inline-block;
+  align-items: center;
+}
+
+.main-likes {
+  margin: 60px;
+}
+
+.main-likes img {
+  max-width: 100%;
+  height: auto;
+}
+
+.main-likes .context {
+  padding-left: 30px;
+}
+
+.heart-button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin-left: 10px;
+  font-size: 25px;
+  color: #ccc;
+  cursor: pointer;
+}
+
+.heart-button i {
+  transition: color 0.3s ease;
+}
+
+.heart-button.active i {
+  color: rgba(255, 0, 0, 0.719);
+}
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 40em) {
+
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem;
+  }
+}
+
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+#nutri_main {
   text-align: center;
   margin: 100px;
 }
@@ -36,15 +132,19 @@
   display: flex;
   justify-items: flex-start;
 }
-.like-button{
+
+.like-button {
   border: 10px white;
 }
-.like-button img{
+
+.like-button img {
   width: 40px;
 }
-.non-like-button{
+
+.non-like-button {
   border: 10px white;
 }
-.non-like-button img{
+
+.non-like-button img {
   width: 40px;
 }
