--- a/html/css/user_likes.css
+++ b/html/css/user_likes.css
@@ -1,100 +1,40 @@
-@font-face {
-  font-family: 'NanumSquareNeo-Variable';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
-
 .body {
   min-height: calc(100vh - 100px);
   margin: 30px;
   width: 500px;
 }
 
-.container {
-  padding: 100px;
-}
-
-h1 {
+#main_likes {
   text-align: center;
-  font: 50px bold;
+  margin: 100px;
 }
 
-#product {
-  width: 250px;
+.like_product {
+  margin: 20%;
 }
 
-.text_context {
-  display: inline-block;
+.like_product img {
+  width: 240px;
+}
+
+.like_product table {
+  display: flex;
   align-items: center;
 }
 
-.main-likes {
-  margin: 60px;
-}
-
-.main-likes img {
-  max-width: 100%;
-  height: auto;
-}
-
-.main-likes .context {
-  padding-left: 30px;
-}
-
-.heart-button {
-  border: none;
-  background-color: transparent;
-  padding: 0;
+.like_product table td {
   margin-left: 10px;
-  font-size: 25px;
-  color: #ccc;
-  cursor: pointer;
+}
+.like-button{
+  border: 10px white;
+}
+.like-button img{
+  width: 40px;
 }
 
-.heart-button i {
-  transition: color 0.3s ease;
+.non-like-button{
+  border: 10px white;
 }
-
-.heart-button.active i {
-  color: rgba(255, 0, 0, 0.719);
-}
-
-
-/* RESPONSIVE CSS
--------------------------------------------------- */
-
-@media (min-width: 40em) {
-
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
-    line-height: 1.4;
-  }
-
-  .featurette-heading {
-    font-size: 50px;
-  }
-}
-
-@media (min-width: 62em) {
-  .featurette-heading {
-    margin-top: 7rem;
-  }
-}
-
-
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
-
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
+.non-like-button img{
+  width: 40px;
 }
