230613-UserController.java, UserService.java, UserRepository.java, JDBCUserRepository.java-html 연결

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1,13 +1,14 @@
 /* CSS style sheet */
 @font-face {
-  font-family: 'NanumSquareNeo-Variable';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+  font-family: "NanumSquareNeo-Variable";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2")
+    format("woff2");
   font-weight: normal;
   font-style: normal;
 }
 
 .banner {
-  font-family: 'NanumSquareNeo-Variable';
+  font-family: "NanumSquareNeo-Variable";
   position: relative;
   text-align: center;
   margin-top: 150px;
@@ -57,10 +58,10 @@
 
 #banner a button {
   color: #fff;
-  border: 2px solid #00997B;
+  border: 2px solid #00997b;
   text-decoration: none;
   text-align: center;
-  background-color: #00997B;
+  background-color: #00997b;
   width: 30%;
   height: 50px;
   line-height: 40px;
@@ -88,14 +89,13 @@
   border: 2px solid rgb(69, 181, 170);
   background-color: rgb(69, 181, 170);
   color: #fff;
-
 }
 
-#icon:checked+label+#in_navi {
+#icon:checked + label + #in_navi {
   position: fixed;
 }
 
-#icon+label+#in_navi {
+#icon + label + #in_navi {
   position: fixed;
   /* Other styles... */
   left: -300px;
@@ -103,12 +103,11 @@
   transition: all 0.35s;
 }
 
-#icon:checked+label+#in_navi {
+#icon:checked + label + #in_navi {
   left: 0px;
   position: fixed;
 }
 
 #in_navi ul li a {
   font-size: 21px;
-
 }
