--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -9,8 +9,8 @@
   <meta name="generator" content="Hugo 0.104.2">
   <title>회원정보수정</title>
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/sign-in/">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/join.css">
+  <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+  <link rel="stylesheet" th:href="@{/css/join.css}">
 </head>
 
 <body class="text-center">
@@ -21,17 +21,17 @@
       <form>
         <div class="info-title">이메일</div>
         <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" readonly>
+          <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com" readonly>
           <label for="floatingInput">hong@sample.com</label>
         </div>
         <div class="info-title">이름</div>
         <div class="form-floating">
-          <input type="text" class="form-control" id="floatingName" placeholder="이름을 입력해주세요" readonly>
+          <input type="text" name="name" class="form-control" id="floatingName" placeholder="이름을 입력해주세요" readonly>
           <label for="floatingName">홍길동</label>
         </div>
         <div class="info-title">비밀번호</div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+          <input type="password" name="pwd" class="form-control" id="floatingPassword" placeholder="Password">
           <label for="floatingPassword"></label>
         </div>
         <div class="info-title">성별</div>
@@ -42,7 +42,7 @@
         </div>
         <div class="info-title">생년월일</div>
         <div class="form-floating">
-          <input type="month" name="birthdaymonth">
+          <input type="month" name="birth">
         </div>
         <div class="form-btn">
           <button class="w-100 btn btn-lg btn-primary" type="submit">수정 완료</button>
@@ -57,13 +57,13 @@
 
   <div id="footer-placeholder"></div>
   <script>
-    fetch('header.html')
+    fetch('/header.html')
       .then(response => response.text())
       .then(html => {
         document.getElementById('header-placeholder').innerHTML = html;
       });
 
-    fetch('footer.html')
+    fetch('/footer.html')
       .then(response => response.text())
       .then(html => {
         document.getElementById('footer-placeholder').innerHTML = html;
