--- a/src/main/resources/templates/find_pwd.html
+++ b/src/main/resources/templates/find_pwd.html
@@ -7,49 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="css/find_pwd.css">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <title>pill&nutritional</title>
+  <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+  <link rel="stylesheet" th:href="@{/css/find_pwd.css}">
+  <title>비밀번호 찾기</title>
 </head>
 
 <body>
-  <!-- end : header -->
-  <!-- START : navi  -->
-  <nav class="nav nav-pills flex-column flex-sm-row">
-    <div class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="checkbox">
-      <input type="checkbox" id="icon">
-      <label for="icon" id="icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </label>
-      <div id="in_navi">
-        <ul>
-          <li><a href="#">의약품 찾기</a></li>
-        </ul>
-      </div>
-    </div>
-    <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="#" id="logo">
-      <img src="img/logo3.png" alt="">
-    </a>
-    <div class="flex-sm-fill text-sm-center nav-link" id="search-bar">
-      <input type="text" placeholder="검색어를 입력하세요">
-      <button type="submit"></button>
-    </div>
-    <div class="flex-sm-fill text-sm-center nav-link" id="util">
-      <a href="#" id="logoin">로그인</a>
-      <a href="#" id='signup'>회원가입</a>
-    </div>
-  </nav>
-  <br>
-  <!-- END : navi  -->
-  <!-- start : body  -->
-
+  <div id="header-placeholder"></div>
   <div class="body_main_size">
-    <img src="img/logo3.png" alt="logo">
+    <img th:src="@{/img/logo3.png}" alt="logo">
     <div id="reset_pwd">
       <form action="/user/reset_pwd" method="POST">
         <h1>비밀번호 찾기</h1>
@@ -65,13 +32,13 @@
 
   <div id="footer-placeholder"></div>
   <script>
-    fetch('header.html')
+    fetch('/header.html')
       .then(response => response.text())
       .then(html => {
         document.getElementById('header-placeholder').innerHTML = html;
       });
 
-    fetch('footer.html')
+    fetch('/footer.html')
       .then(response => response.text())
       .then(html => {
         document.getElementById('footer-placeholder').innerHTML = html;
