--- a/src/main/resources/templates/admin/nutri_list.html
+++ b/src/main/resources/templates/admin/nutri_list.html
@@ -47,18 +47,6 @@
     </div>
 
     <div id="footer-placeholder"></div>
-    <script>
-      fetch('header.html')
-        .then(response => response.text())
-        .then(html => {
-          document.getElementById('header-placeholder').innerHTML = html;
-        });
-  
-      fetch('footer.html')
-        .then(response => response.text())
-        .then(html => {
-          document.getElementById('footer-placeholder').innerHTML = html;
-        });
-    </script>
+    <script th:src="@{/js/hf.js}"></script>
   </body>
 </html>
