--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,79 +1,83 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <meta
+      name="author"
+      content="Mark Otto, Jacob Thornton, and Bootstrap contributors"
+    />
+    <meta name="generator" content="Hugo 0.104.2" />
+    <title>회원가입</title>
+    <link
+      rel="canonical"
+      href="https://getbootstrap.com/docs/5.2/examples/sign-in/"
+    />
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
+    <link rel="stylesheet" th:href="@{/css/join.css}" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-  <meta name="generator" content="Hugo 0.104.2">
-  <title>회원가입</title>
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/sign-in/">
-  <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-  <link rel="stylesheet" th:href="@{/css/join.css}">
-</head>
-
-<body class="text-center">
-  <div id="header-placeholder"></div>
-  <div class="container">
-    <main class="form-signin w-100 m-auto container">
-
-      <h2 class="h1 mb-3 fw-normal">회원가입</h2>
-      <div class="form-align">
-        <form action="/join" method="Post">
-          <div class="info-title">이메일</div>
-          <div class="form-floating">
-            <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput"></label>
-          </div>
-          <div class="info-title">이름</div>
-          <div class="form-floating">
-            <input type="text" name="name" class="form-control" id="floatingName" placeholder="이름을 입력해주세요">
-            <label for="floatingName"></label>
-          </div>
-          <div class="info-title">비밀번호</div>
-          <div class="form-floating">
-            <input type="password" name="pwd" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword"></label>
-          </div>
-          <div class="info-title">성별</div>
-          <div class="form-floating gender">
-            <input type="radio" name="gender" value="male" checked> 남자
-            <input type="radio" name="gender" value="female"> 여자
-            <input type="radio" name="gender" value="nan"> 없음
-          </div>
-          <div class="info-title">생년월일</div>
-          <div class="form-floating">
-            <input type="date" name="birth">
-          </div>
-          <div class="form-btn">
-
-            <button class="w-100 btn btn-lg btn-primary" type="submit">가입하기</button>
-          </div>
-
-        </form>
-
-
-      </div>
-
-    </main>
-  </div>
-  <div id="footer-placeholder"></div>
-  <script>
-    fetch('/header.html')
-      .then(response => response.text())
-      .then(html => {
-        document.getElementById('header-placeholder').innerHTML = html;
-      });
-
-    fetch('/footer.html')
-      .then(response => response.text())
-      .then(html => {
-        document.getElementById('footer-placeholder').innerHTML = html;
-      });
-  </script>
-
-
-</body>
-
+  <body class="text-center">
+    <div id="header-placeholder"></div>
+    <div class="container">
+      <main class="form-signin w-100 m-auto container">
+        <h2 class="h1 mb-3 fw-normal">회원가입</h2>
+        <div class="form-align">
+          <form action="/join" method="Post">
+            <div class="info-title">이메일</div>
+            <div class="form-floating">
+              <input
+                type="email"
+                name="email"
+                class="form-control"
+                id="floatingInput"
+                placeholder="name@example.com"
+              />
+              <label for="floatingInput"></label>
+            </div>
+            <div class="info-title">이름</div>
+            <div class="form-floating">
+              <input
+                type="text"
+                name="name"
+                class="form-control"
+                id="floatingName"
+                placeholder="이름을 입력해주세요"
+              />
+              <label for="floatingName"></label>
+            </div>
+            <div class="info-title">비밀번호</div>
+            <div class="form-floating">
+              <input
+                type="password"
+                name="pwd"
+                class="form-control"
+                id="floatingPassword"
+                placeholder="Password"
+              />
+              <label for="floatingPassword"></label>
+            </div>
+            <div class="info-title">성별</div>
+            <div class="form-floating gender">
+              <input type="radio" name="gender" value="male" checked /> 남자
+              <input type="radio" name="gender" value="female" /> 여자
+              <input type="radio" name="gender" value="nan" /> 없음
+            </div>
+            <div class="info-title">생년월일</div>
+            <div class="form-floating">
+              <input type="date" name="birth" />
+            </div>
+            <div class="form-btn">
+              <button class="w-100 btn btn-lg btn-primary" type="submit">
+                가입하기
+              </button>
+            </div>
+          </form>
+        </div>
+      </main>
+    </div>
+    <div id="footer-placeholder"></div>
+    <script th:src="@{/js/hf.js}"></script>
+  </body>
 </html>
