--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,6 @@
     <div id="header-placeholder"></div>
     <div class="container-lg">
       <div class="login_form_title">
-
         <h2>로그인</h2>
       </div>
       <div class="login_form">
@@ -25,7 +24,7 @@
               placeholder="이메일을 입력해주세요"
               aria-label="Username"
               aria-describedby="basic-addon1"
-              name="user_email"
+              name="input_email"
             />
           </div>
           <div class="input-group">
@@ -36,7 +35,7 @@
               placeholder="비밀번호를 입력해주세요"
               aria-label="Username"
               aria-describedby="basic-addon2"
-              name="user_pwd"
+              name="input_pwd"
             />
           </div>
           <div>
@@ -50,18 +49,6 @@
       </div>
     </div>
     <div id="footer-placeholder"></div>
-    <script>
-      fetch('/header.html')
-        .then(response => response.text())
-        .then(html => {
-          document.getElementById('header-placeholder').innerHTML = html;
-        });
-  
-      fetch('/footer.html')
-        .then(response => response.text())
-        .then(html => {
-          document.getElementById('footer-placeholder').innerHTML = html;
-        });
-    </script>
+    <script th:src="@{/js/hf.js}"></script>
   </body>
 </html>
