--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -87,6 +87,24 @@ a {
   text-align: left;
 }
 
+.heart-button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin-left: 10px;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.heart-button i {
+  transition: color 0.3s ease;
+}
+
+.heart-button.active i {
+  color: rgba(255, 0, 0, 0.719);
+}
+
 .card-text {
   margin-bottom: 0;
 }
