--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -23,7 +23,7 @@
     <div class="form-signin w-100 m-auto container">
       <h2 class="h1 mb-3 fw-normal">회원정보 수정</h2>
       <div class="form-align">
-        <form>
+        <form action="/user/edit" method="Post">
           <div class="info-title">이메일</div>
           <div class="form-floating">
             <input
@@ -32,9 +32,10 @@
               class="form-control"
               id="floatingInput"
               placeholder="name@example.com"
+              th:value="${user.email}"
               readonly
             />
-            <label for="floatingInput">hong@sample.com</label>
+            <label for="floatingInput"></label>
           </div>
           <div class="info-title">이름</div>
           <div class="form-floating">
@@ -44,9 +45,10 @@
               class="form-control"
               id="floatingName"
               placeholder="이름을 입력해주세요"
+              th:value="${user.name}"
               readonly
             />
-            <label for="floatingName">홍길동</label>
+            <label for="floatingName"></label>
           </div>
           <div class="info-title">비밀번호</div>
           <div class="form-floating">
@@ -56,18 +58,19 @@
               class="form-control"
               id="floatingPassword"
               placeholder="Password"
+              th:value="${user.pwd}"
             />
             <label for="floatingPassword"></label>
           </div>
           <div class="info-title">성별</div>
           <div class="form-floating gender">
-            <input type="radio" name="gender" value="male" checked /> 남자
-            <input type="radio" name="gender" value="female" /> 여자
-            <input type="radio" name="gender" value="nan" /> 없음
+            <input type="radio" name="gender" value="male" th:checked="${user.gender == 'male'}" /> 남자
+            <input type="radio" name="gender" value="female" th:checked="${user.gender == 'female'}"/> 여자
+            <input type="radio" name="gender" value="nan" th:checked="${user.gender == 'nan'}"/> 없음
           </div>
           <div class="info-title">생년월일</div>
           <div class="form-floating">
-            <input type="month" name="birth" />
+            <input type="date" name="birth" th:field="${user.birth}"/>
           </div>
           <div class="form-btn">
             <button class="w-100 btn btn-lg btn-primary" type="submit">
