--- a/src/main/resources/templates/user/info.html
+++ b/src/main/resources/templates/user/info.html
@@ -26,22 +26,24 @@
         <form id="user_info">
           <div class="info-title">이메일</div>
           <div class="form-floating">
-            <p class="user_info">hong@sample.com</p>
+            <p class="user_info" th:text="${user.email}">hong@sample.com</p>
           </div>
           <div class="info-title">이름</div>
           <div class="form-floating">
-            <p class="user_info">홍길동</p>
+            <p class="user_info" th:text="${user.name}">홍길동</p>
           </div>
           <div class="info-title">성별</div>
           <div class="form-floating gender">
-            <p class="user_info">남자</p>
+            <p class="user_info" th:if="${user.gender=='male'}">남자</p>
+            <p class="user_info" th:if="${user.gender=='female'}">여자</p>
+            <p class="user_info" th:if="${user.gender=='nan'}">없음</p>
           </div>
           <div class="info-title">생년월일</div>
           <div class="form-floating">
-            <p class="user_info">2000. 01. 01</p>
+            <p class="user_info" th:text="${user.birth}">2000. 01. 01</p>
           </div>
           <div class="form-btn">
-            <button class="w-100 btn btn-lg btn-primary" type="submit">
+            <button class="w-100 btn btn-lg btn-primary" type="button" th:onclick="|location.href='@{/user/edit}'|">
               회원정보 수정
             </button>
           </div>
