--- a/src/main/resources/static/css/nutri_result.css
+++ b/src/main/resources/static/css/nutri_result.css
@@ -16,79 +16,77 @@
   margin-left: 20%;
 }
 
-#nutri_main{
+#nutri_main {
   text-align: center;
-  margin: 100px;
+  margin: 10px;
 }
-
-.nutri_product {
-  margin: 20%;
-  margin-top: 10%;
+#main_title{
+  margin-bottom: 5%;
+  margin-top: 5%;
 }
-
-.nutri_product img {
-  width: 240px;
+.text_context{
+  display: flex;
+  flex-direction: column;
 }
-
-.nutri_product table {
+.row {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin-left: 30%;
+  margin-right: 30%;
+  flex-direction: row-reverse;
+}
+.row-1{
+  display: flex;
+}
+.text_area {
+  position: fixed;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
-
-.nutri_product table td {
-  margin-left: 10px;
-}
-
-.nutri_product table td button {
+.product-info {
   display: flex;
-  justify-items: flex-start;
+  align-items: center;
+  justify-content: space-between; /* 추가 */
+  margin-bottom: 10px;
 }
-.like-button{
-  border: 10px white;
+.product-info .product-name {
+  margin-right: 10px;
 }
-.like-button img{
-  width: 40px;
+.product-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* 추가 */
+  margin-bottom: 10px;
 }
-.non-like-button{
-  border: 10px white;
-}
-.non-like-button img{
-  width: 40px;
-}
-
-
-body {
-  min-height: calc(100vh - 100px);
-}
-
-.container {
-  padding: 100px;
-}
-
-h1 {
-  text-align: center;
-}
-
 #product {
   width: 250px;
 }
-
-.text_context {
-  display: inline-block;
-  align-items: center;
+.text_area img {
+  margin-right: 20px;
 }
 
-.main-likes {
-  margin: 60px;
+.name-container {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.main-likes img {
-  max-width: 100%;
-  height: auto;
+.name-container span {
+  margin-bottom: 10px;
+}
+.text_area .col-6 {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column-reverse;
+  flex-wrap: nowrap;
+  align-content: center;
+  align-items: baseline;
 }
 
-.main-likes .context {
-  padding-left: 30px;
+.text_area .col-6 .product-info .product-name {
+  text-align: left;
 }
 
 .heart-button {
@@ -96,7 +94,7 @@ h1 {
   background-color: transparent;
   padding: 0;
   margin-left: 10px;
-  font-size: 25px;
+  font-size: 16px;
   color: #ccc;
   cursor: pointer;
 }
@@ -146,44 +144,4 @@ h1 {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
   }
-}
-
-#nutri_main{
-  text-align: center;
-  margin: 100px;
-}
-
-.nutri_product {
-  margin: 20%;
-  margin-top: 10%;
-}
-
-.nutri_product img {
-  width: 240px;
-}
-
-.nutri_product table {
-  display: flex;
-  align-items: center;
-}
-
-.nutri_product table td {
-  margin-left: 10px;
-}
-
-.nutri_product table td button {
-  display: flex;
-  justify-items: flex-start;
-}
-.like-button{
-  border: 10px white;
-}
-.like-button img{
-  width: 40px;
-}
-.non-like-button{
-  border: 10px white;
-}
-.non-like-button img{
-  width: 40px;
 }
